MNEE Caustics ray depth is incorrect #97921

Closed
opened 2022-05-07 03:42:29 +02:00 by Alaska · 9 comments
Member

System Information
Operating system: Linux-5.17.0-1-amd64-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.68.02

Blender Version
Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-06 21:48, hash: 98a04ed452
Worked: NA as this issue is present in all Blender versions with MNEE Caustics

Short description of error
The ray depth for MNEE Caustics is incorrect. This results in noticeable differences when enabling MNEE caustics in a scene where the ray depth is used to influence the final render.

Example render:
In this scene there is a sphere that's casting caustics both inside it and behind it on a plane (Note: The is invisible to the camera). I have used ray depth to change the colour of the light source upon passing through the sphere. You can find the .blend file I used attached at the end of this report.

Ray depth no MNEE caustic test.jpg Ray depth MNEE caustic test.jpg
Rendered without MNEE Rendered with MNEE

Exact steps for others to reproduce the error

  1. Change the render engine to Cycles.
  2. Setup a scene for MNEE caustics by adding a caustic caster, caustic receiver, shadow caustic light, etc.
  3. Use one of the Depth outputs on a light path node to adjust the colour and/or brightness of the caustics. (I have included an image of an example node setup for the shadow caustic light)
  4. Notice how MNEE caustics and non MNEE caustics produce different results as if the caustics have a different ray depth between the two techniques. This can be done by enabling and disabling MNEE caustics and comparing the results.

Example node setup for light:
Ray depth MNEE caustic node setup.png

Here is a .blend file with steps 1-3 done for you.
#97921 - MNEE Caustics ray depth issue.blend

**System Information** Operating system: Linux-5.17.0-1-amd64-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.68.02 **Blender Version** Broken: version: 3.3.0 Alpha, branch: master, commit date: 2022-05-06 21:48, hash: `98a04ed452` Worked: NA as this issue is present in all Blender versions with MNEE Caustics **Short description of error** The ray depth for MNEE Caustics is incorrect. This results in noticeable differences when enabling MNEE caustics in a scene where the ray depth is used to influence the final render. Example render: In this scene there is a sphere that's casting caustics both inside it and behind it on a plane (Note: The is invisible to the camera). I have used ray depth to change the colour of the light source upon passing through the sphere. You can find the .blend file I used attached at the end of this report. |![Ray depth no MNEE caustic test.jpg](https://archive.blender.org/developer/F13055602/Ray_depth_no_MNEE_caustic_test.jpg)|![Ray depth MNEE caustic test.jpg](https://archive.blender.org/developer/F13055604/Ray_depth_MNEE_caustic_test.jpg)| | -- | -- | |Rendered without MNEE|Rendered with MNEE| **Exact steps for others to reproduce the error** 1. Change the render engine to Cycles. 2. Setup a scene for MNEE caustics by adding a caustic caster, caustic receiver, shadow caustic light, etc. 3. Use one of the `Depth` outputs on a light path node to adjust the colour and/or brightness of the caustics. (I have included an image of an example node setup for the shadow caustic light) 4. Notice how MNEE caustics and non MNEE caustics produce different results as if the caustics have a different ray depth between the two techniques. This can be done by enabling and disabling MNEE caustics and comparing the results. Example node setup for light: ![Ray depth MNEE caustic node setup.png](https://archive.blender.org/developer/F13055600/Ray_depth_MNEE_caustic_node_setup.png) Here is a .blend file with steps 1-3 done for you. [#97921 - MNEE Caustics ray depth issue.blend](https://archive.blender.org/developer/F13055606/T97921_-_MNEE_Caustics_ray_depth_issue.blend)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Added subscribers: @olivier.fx, @PratikPB2123

Added subscribers: @olivier.fx, @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member
cc @olivier.fx
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Following the "bug in new feature" policy, will set to High priority.

Following the "bug in new feature" policy, will set to High priority.

Thanks for creating this scene @Alaska, it surfaced 2 issues which D14902 should hopefully address:

  • transmission depth was not computed correctly.
  • bounce info was not updated appropriately when evaluating related shader graphs.

With the patch applied, the scene above renders like this:
image.png
With the hemisphere camera visibility enabled:
image.png

Thanks for creating this scene @Alaska, it surfaced 2 issues which [D14902](https://archive.blender.org/developer/D14902) should hopefully address: - transmission depth was not computed correctly. - bounce info was not updated appropriately when evaluating related shader graphs. With the patch applied, the scene above renders like this: ![image.png](https://archive.blender.org/developer/F13063157/image.png) With the hemisphere camera visibility enabled: ![image.png](https://archive.blender.org/developer/F13063160/image.png)

This issue was referenced by b48adbc9d7

This issue was referenced by b48adbc9d79c55b8dac368865098b34c7536d74f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2022-05-17 21:08:47 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#97921
No description provided.